--- a/redshift_colab_portfolio.ipynb
+++ b/redshift_colab_portfolio.ipynb
@@ -613,7 +613,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 📈 Advanced Analysis 1: Revenue Trend Over Time\n",
+        "## 📈 Step 6 : Advanced Analysis 1: Revenue Trend Over Time\n",
         "We’ll look at how total revenue changes over time across all events."
       ],
       "metadata": {
@@ -707,6 +707,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##📊 Step 7 : Advanced Analysis 2: Revenue by Event Category\n",
+        "This shows how different event categories (e.g., Concerts, Sports, Theater) contribute to total revenue."
+      ],
+      "metadata": {
+        "id": "JM9gawyr4T9B"
+      },
+      "id": "JM9gawyr4T9B"
     },
     {
       "cell_type": "code",
